# propertybasedprogramming

./: PBP.cabal  PBP.hs  README.md  Test.hs
examples/: Api.hs  Compiler.hs  Graph.hs  Regexp.hs  Sorting.hs  Update.hs  data.json
